deployment/base/console-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console-backend
  labels:
    app.kubernetes.io/name: securesign-sample
    app.kubernetes.io/instance: securesign-sample
    app.kubernetes.io/part-of: trusted-artifact-signer
    app.kubernetes.io/component: console-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: securesign-sample
      app.kubernetes.io/instance: securesign-sample
      app.kubernetes.io/part-of: trusted-artifact-signer
      app.kubernetes.io/component: console-backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: securesign-sample
        app.kubernetes.io/instance: securesign-sample
        app.kubernetes.io/part-of: trusted-artifact-signer
        app.kubernetes.io/component: console-backend
    spec:
      serviceAccountName: console-backend
      containers:
      - name: console-backend
        image: default/console-image
        imagePullPolicy: IfNotPresent
        command:
        - /tmp/rhtas_console
        args:
        - --tuf-repo-url=$(TUF_REPO_URL)
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
