deployment/base/console-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: console-db
  labels:
    app.kubernetes.io/name: securesign-sample
    app.kubernetes.io/instance: securesign-sample
    app.kubernetes.io/part-of: trusted-artifact-signer
    app.kubernetes.io/component: console-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: securesign-sample
      app.kubernetes.io/instance: securesign-sample
      app.kubernetes.io/part-of: trusted-artifact-signer
      app.kubernetes.io/component: console-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: securesign-sample
        app.kubernetes.io/instance: securesign-sample
        app.kubernetes.io/part-of: trusted-artifact-signer
        app.kubernetes.io/component: console-db
    spec:
      serviceAccountName: console-db
      containers:
      - name: console-db
        image: ${CONSOLE_DB_IMAGE}
        imagePullPolicy: IfNotPresent
        command: ["run-mysqld"]
        ports:
        - containerPort: 3306
          name: mysql
        livenessProbe:
          exec:
            command:
            - bash
            - -c
            - mariadb-admin -u ${MYSQL_USER} -p${MYSQL_PASSWORD} ping
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - bash
            - -c
            - mariadb -u ${MYSQL_USER} -p${MYSQL_PASSWORD} -e "SELECT 1;"
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: storage
  volumeClaimTemplates:
  - metadata:
      name: storage
      labels:
        app.kubernetes.io/name: securesign-sample
        app.kubernetes.io/instance: securesign-sample
        app.kubernetes.io/part-of: trusted-artifact-signer
        app.kubernetes.io/component: console-db
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
