deployment/base/console-ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console-ui
  labels:
    app.kubernetes.io/name: securesign-sample
    app.kubernetes.io/instance: securesign-sample
    app.kubernetes.io/part-of: trusted-artifact-signer
    app.kubernetes.io/component: console-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: securesign-sample
      app.kubernetes.io/instance: securesign-sample
      app.kubernetes.io/part-of: trusted-artifact-signer
      app.kubernetes.io/component: console-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: securesign-sample
        app.kubernetes.io/instance: securesign-sample
        app.kubernetes.io/part-of: trusted-artifact-signer
        app.kubernetes.io/component: console-ui
    spec:
      serviceAccountName: console-ui
      containers:
      - name: console-ui
        image: default/console-ui-image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
