deployment/base/console-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-backend
  labels:
    app.kubernetes.io/name: securesign-sample
    app.kubernetes.io/instance: securesign-sample
    app.kubernetes.io/part-of: trusted-artifact-signer
    app.kubernetes.io/component: console-backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: securesign-sample
    app.kubernetes.io/instance: securesign-sample
    app.kubernetes.io/part-of: trusted-artifact-signer
    app.kubernetes.io/component: console-backend
  ports:
  - name: http
    port: 8080
    targetPort: http
