deployment/base/console-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-db
  labels:
    app.kubernetes.io/name: securesign-sample
    app.kubernetes.io/instance: securesign-sample
    app.kubernetes.io/part-of: trusted-artifact-signer
    app.kubernetes.io/component: console-db
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: securesign-sample
    app.kubernetes.io/instance: securesign-sample
    app.kubernetes.io/part-of: trusted-artifact-signer
    app.kubernetes.io/component: console-db
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
