deployment/base/console-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-ui
  labels:
    app.kubernetes.io/name: securesign-sample
    app.kubernetes.io/instance: securesign-sample
    app.kubernetes.io/part-of: trusted-artifact-signer
    app.kubernetes.io/component: console-ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: securesign-sample
    app.kubernetes.io/instance: securesign-sample
    app.kubernetes.io/part-of: trusted-artifact-signer
    app.kubernetes.io/component: console-ui
  ports:
  - name: http
    port: 8080
    targetPort: http
